<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">사원증 찾기</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_widget">WidgetActivity</string>
    <string name="str_done">완료</string>

    <!-- help message -->
    <string name="help">이 앱은 블루투스 기능이 켜져 있을 때 정상적으로 동작합니다.</string>
    <string name="card">사원증 등록버튼입니다.\n화면의 지시에 따라 사원증을 접근시키고, 원하는 이름을 입력하면 등록이 완료됩니다.\n</string>
    <string name="service">사원증 알림 버튼입니다.\n알림을 켤 때, 위치 기능을 활성화 시킬 지 여부를 결정합니다. 위치 기능을 활성화하지 않으시면 탐색 기능을 사용할 때 사원증의 예측 위치를 제공받으실 수 없습니다.\n알림이 켜져있을 때는 사원증과의 거리에 따라 상태바에 표시하게 됩니다.\n</string>
    <string name="finder">사원증 탐색 버튼입니다.\n알림이 켜져있을 경우에만 동작합니다.\n사원증을 찾을 수 없는 경우, 사원증을 탐색할 때 사용합니다.\n탐색 화면에서는 사원증과의 거리를 알려드립니다.\n</string>
    <string name="map">지도 버튼에서는 핸드폰과 사원증이 마지막으로 통신한 위치를 지도로 보여드립니다.\n알림을 켤 때 위치 기능을 활성화 시키셔야 위치 정보를 제공받을 수 있습니다.\n</string>

</resources>